--- a/charts/cronjob/values.yaml
+++ b/charts/cronjob/values.yaml
@@ -67,10 +67,15 @@ service:
 # Ingress configuration (optional, rarely needed for CronJobs)
 ingress:
   enabled: false
-  className: haproxy
-  controllerType: haproxy  # haproxy or nginx — determines annotation format (independent of className)
+  className: haproxy           # Kubernetes IngressClass name (any custom name)
+  controllerType: haproxy      # "haproxy" or "nginx" — annotation format (independent of className)
 
-  # Security Headers - Modern best practices
+  # ┌──────────────────────────────────────────────────────────────────┐
+  # │ FEATURE SUPPORT:  [HAProxy: ✅ | NGINX: ✅] = both supported    │
+  # │   ❌ (ConfigMap) = configure via controller ConfigMap instead    │
+  # └──────────────────────────────────────────────────────────────────┘
+
+  # Security Headers [HAProxy: ✅ | NGINX: ✅]
   securityHeaders:
     enabled: false
     hsts: true
@@ -83,32 +88,28 @@ ingress:
     referrerPolicy: "strict-origin-when-cross-origin"
     csp: ""
 
-  # SSL/TLS Configuration
   ssl:
-    redirect: true
-    protocols: "TLSv1.2 TLSv1.3"
-    ciphers: ""
+    redirect: true                          # [HAProxy: ✅ | NGINX: ✅]
+    protocols: "TLSv1.2 TLSv1.3"           # [HAProxy: ❌ ConfigMap | NGINX: ✅]
+    ciphers: ""                             # [HAProxy: ❌ ConfigMap | NGINX: ✅]
 
-  # Performance & Reliability
   proxy:
-    bodySize: "8m"
-    connectTimeout: 60
-    sendTimeout: 60
-    readTimeout: 60
-    bufferSize: "4k"
-    buffersNumber: 4
-    nextUpstream: "error timeout"
-    nextUpstreamTries: 3
+    bodySize: "8m"                          # [HAProxy: ❌ ConfigMap | NGINX: ✅]
+    connectTimeout: 60                      # [HAProxy: ✅ | NGINX: ✅]
+    sendTimeout: 60                         # [HAProxy: ✅ timeout-server | NGINX: ✅]
+    readTimeout: 60                         # [HAProxy: ✅ timeout-server | NGINX: ✅]
+    bufferSize: "4k"                        # [HAProxy: ❌ ConfigMap | NGINX: ✅]
+    buffersNumber: 4                        # [HAProxy: ❌ ConfigMap | NGINX: ✅]
+    nextUpstream: "error timeout"           # [HAProxy: ❌ ConfigMap | NGINX: ✅]
+    nextUpstreamTries: 3                    # [HAProxy: ❌ ConfigMap | NGINX: ✅]
 
-  # Rate Limiting
-  rateLimit:
+  rateLimit:                                # [HAProxy: ✅ | NGINX: ✅]
     enabled: false
     rps: 100
-    burst: 200
+    burst: 200                              # [HAProxy: ❌ | NGINX: ✅]
     key: "$binary_remote_addr"
 
-  # CORS (Cross-Origin Resource Sharing)
-  cors:
+  cors:                                     # [HAProxy: ✅ | NGINX: ✅]
     enabled: false
     allowOrigin: "*"
     allowMethods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
@@ -116,19 +117,14 @@ ingress:
     allowCredentials: true
     maxAge: 3600
 
-  # Websocket Support
-  websocket:
+  websocket:                                # [HAProxy: ✅ timeout-tunnel | NGINX: ✅ websocket-svc]
     enabled: false
 
-  # Canary Deployment (NGINX only)
-  canary:
+  canary:                                   # [HAProxy: ❌ | NGINX: ✅]
     enabled: false
     weight: 0
 
-  # Custom annotations (merged with generated ones)
   extraAnnotations: {}
-
-  # Extra labels
   extraLabels: {}
 
   hosts:
@@ -141,18 +137,18 @@ ingress:
 
 ingressGRPC:
   enabled: false
-  className: haproxy
-  controllerType: haproxy  # haproxy or nginx — determines annotation format (independent of className)
+  className: haproxy           # Kubernetes IngressClass name (any custom name)
+  controllerType: haproxy      # "haproxy" or "nginx" — annotation format (independent of className)
 
-  # GRPC-specific settings
+  # [HAProxy: ✅ server-proto h2 | NGINX: ✅ backend-protocol GRPC]
   grpc:
-    timeout: 300
-    maxMessageSize: "4m"
+    timeout: 300               # [HAProxy: ✅ timeout-tunnel | NGINX: ✅ grpc_read/send_timeout]
+    maxMessageSize: "4m"       # [HAProxy: ❌ | NGINX: ✅ client_max_body_size]
     keepaliveTime: 30
     keepaliveTimeout: 10
     keepalivePermitWithoutCalls: false
 
-  # Security Headers
+  # Security Headers [HAProxy: ✅ | NGINX: ✅]
   securityHeaders:
     enabled: false
     hsts: true
