--- a/charts/cronjob/templates/cronjob.yaml
+++ b/charts/cronjob/templates/cronjob.yaml
@@ -28,25 +28,25 @@ spec:
       labels:
         {{- include "cronjob.selectorLabels" . | nindent 8 }}
     spec:
-      {{- if .Values.job.backoffLimit }}
+      {{- if and .Values.job .Values.job.backoffLimit }}
       backoffLimit: {{ .Values.job.backoffLimit }}
       {{- end }}
-      {{- if .Values.job.completions }}
+      {{- if and .Values.job .Values.job.completions }}
       completions: {{ .Values.job.completions }}
       {{- end }}
-      {{- if .Values.job.parallelism }}
+      {{- if and .Values.job .Values.job.parallelism }}
       parallelism: {{ .Values.job.parallelism }}
       {{- end }}
-      {{- if .Values.job.activeDeadlineSeconds }}
+      {{- if and .Values.job .Values.job.activeDeadlineSeconds }}
       activeDeadlineSeconds: {{ .Values.job.activeDeadlineSeconds }}
       {{- end }}
-      {{- if .Values.job.ttlSecondsAfterFinished }}
+      {{- if and .Values.job .Values.job.ttlSecondsAfterFinished }}
       ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
       {{- end }}
       template:
         metadata:
           annotations:
-            {{- if .Values.configmap.enabled }}
+            {{- if and .Values.configmap .Values.configmap.enabled }}
             checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
             {{- end }}
             {{- with .Values.podAnnotations }}
@@ -65,7 +65,7 @@ spec:
           serviceAccountName: {{ include "cronjob.serviceAccountName" . }}
           securityContext:
             {{- toYaml .Values.podSecurityContext | nindent 12 }}
-          restartPolicy: {{ .Values.job.restartPolicy }}
+          restartPolicy: {{ (default dict .Values.job).restartPolicy | default "OnFailure" }}
           terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds | default 30 }}
           {{- if .Values.dnsPolicy }}
           dnsPolicy: {{ .Values.dnsPolicy }}
@@ -87,9 +87,9 @@ spec:
           {{- if .Values.shareProcessNamespace }}
           shareProcessNamespace: {{ .Values.shareProcessNamespace }}
           {{- end }}
-          {{- if or .Values.initContainers.enabled .Values.extraInitContainers }}
+          {{- if or (and .Values.initContainers .Values.initContainers.enabled) .Values.extraInitContainers }}
           initContainers:
-            {{- if .Values.initContainers.enabled }}
+            {{- if and .Values.initContainers .Values.initContainers.enabled }}
             {{- range .Values.initContainers.containers }}
             - name: {{ .name }}
               image: {{ .image }}
@@ -127,17 +127,17 @@ spec:
               args:
                 {{- toYaml .Values.args | nindent 16 }}
               {{- end }}
-              {{- if or .Values.env .Values.configmap.enabled .Values.ExternalSecret.enabled .Values.extraEnvFrom }}
+              {{- if or .Values.env (and .Values.configmap .Values.configmap.enabled) (and .Values.ExternalSecret .Values.ExternalSecret.enabled) .Values.extraEnvFrom }}
               {{- if .Values.env }}
               env:
                 {{- toYaml .Values.env | nindent 16 }}
               {{- end }}
               envFrom:
-              {{- if .Values.configmap.enabled }}
+              {{- if and .Values.configmap .Values.configmap.enabled }}
               - configMapRef:
                   name: {{ include "cronjob.fullname" . }}
               {{- end }}
-              {{- if .Values.ExternalSecret.enabled }}
+              {{- if and .Values.ExternalSecret .Values.ExternalSecret.enabled }}
               - secretRef:
                   name: {{ include "cronjob.fullname" . }}
               {{- end }}
@@ -145,9 +145,9 @@ spec:
               {{- toYaml . | nindent 14 }}
               {{- end }}
               {{- end }}
-              {{- if or .Values.volumeMounts (and .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumeMounts }}
+              {{- if or .Values.volumeMounts (and .Values.configmap .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumeMounts }}
               volumeMounts:
-              {{- if .Values.configmap.enabled }}
+              {{- if and .Values.configmap .Values.configmap.enabled }}
               {{- if .Values.configmap.fileData }}
               {{- range .Values.configmap.fileData }}
               - name: custom-config-volume-{{ .fileName | replace ".yaml" "" | replace ".yml" "" | replace ".json" "" | replace ".conf" "" }}
@@ -172,9 +172,9 @@ spec:
           {{- with .Values.extraContainers }}
           {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- if or .Values.volumes (and .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumes }}
+          {{- if or .Values.volumes (and .Values.configmap .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumes }}
           volumes:
-          {{- if .Values.configmap.enabled }}
+          {{- if and .Values.configmap .Values.configmap.enabled }}
           {{- if .Values.configmap.fileData }}
           {{- range .Values.configmap.fileData }}
           - name: custom-config-volume-{{ .fileName | replace ".yaml" "" | replace ".yml" "" | replace ".json" "" | replace ".conf" "" }}
