--- a/charts/daemonset/templates/daemonset.yaml
+++ b/charts/daemonset/templates/daemonset.yaml
@@ -22,7 +22,7 @@ spec:
   template:
     metadata:
       annotations:
-        {{- if .Values.configmap.enabled }}
+        {{- if and .Values.configmap .Values.configmap.enabled }}
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
         {{- end }}
         {{- with .Values.podAnnotations }}
@@ -62,9 +62,9 @@ spec:
       {{- if .Values.shareProcessNamespace }}
       shareProcessNamespace: {{ .Values.shareProcessNamespace }}
       {{- end }}
-      {{- if or .Values.initContainers.enabled .Values.extraInitContainers }}
+      {{- if or (and .Values.initContainers .Values.initContainers.enabled) .Values.extraInitContainers }}
       initContainers:
-        {{- if .Values.initContainers.enabled }}
+        {{- if and .Values.initContainers .Values.initContainers.enabled }}
         {{- range .Values.initContainers.containers }}
         - name: {{ .name }}
           image: {{ .image }}
@@ -94,17 +94,17 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if or .Values.env .Values.configmap.enabled .Values.ExternalSecret.enabled .Values.extraEnvFrom }}
+          {{- if or .Values.env (and .Values.configmap .Values.configmap.enabled) (and .Values.ExternalSecret .Values.ExternalSecret.enabled) .Values.extraEnvFrom }}
           {{- if .Values.env }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
           {{- end }}
           envFrom:
-          {{- if .Values.configmap.enabled }}
+          {{- if and .Values.configmap .Values.configmap.enabled }}
           - configMapRef:
               name: {{ include "daemonset.fullname" . }}
           {{- end }}
-          {{- if .Values.ExternalSecret.enabled }}
+          {{- if and .Values.ExternalSecret .Values.ExternalSecret.enabled }}
           - secretRef:
               name: {{ include "daemonset.fullname" . }}
           {{- end }}
@@ -112,9 +112,9 @@ spec:
           {{- toYaml . | nindent 10 }}
           {{- end }}
           {{- end }}
-          {{- if or (and .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumeMounts }}
+          {{- if or (and .Values.configmap .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumeMounts }}
           volumeMounts:
-          {{- if .Values.configmap.enabled }}
+          {{- if and .Values.configmap .Values.configmap.enabled }}
           {{- if .Values.configmap.fileData }}
           {{- range .Values.configmap.fileData }}
           - name: custom-config-volume-{{ .fileName | replace ".yaml" "" | replace ".yml" "" | replace ".json" "" | replace ".conf" "" }}
@@ -145,9 +145,9 @@ spec:
         {{- with .Values.extraContainers }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
-      {{- if or (and .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumes }}
+      {{- if or (and .Values.configmap .Values.configmap.enabled .Values.configmap.fileData) .Values.extraVolumes }}
       volumes:
-      {{- if .Values.configmap.enabled }}
+      {{- if and .Values.configmap .Values.configmap.enabled }}
       {{- if .Values.configmap.fileData }}
       {{- range .Values.configmap.fileData }}
       - name: custom-config-volume-{{ .fileName | replace ".yaml" "" | replace ".yml" "" | replace ".json" "" | replace ".conf" "" }}
